@@ -1,3 +1,6 @@
+09-08-2005 Qball <Qball@qballcow.nl>
+	* src/pl3_custom_stream.c|h:	Moving some code.
+
 06-08-2005 Qball <Qball@qballcow.nl>
 	* src/playlist3.c/main.c:	Row highlight when playing now also
 	changes the icon.
